--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,10 +1,10 @@
 <div class="container">
     <div class="row">
         <div class="col-sm">
-            <!-- <app-form></app-form> -->
+            <app-form></app-form>
         </div>
         <div class="col-sm">
-            <app-card [product]="{product}"></app-card> 
+        <app-card [product]="product" [catalogo]="false"></app-card> 
         </div>
     </div>
 </div>
