--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,11 +1,11 @@
-<div class="card mb-3 shadow-sm">
+<div class="card mb-3 shadow-sm containerCard">
   <h4 class="card-text text-center">{{product.descripcion}}</h4>
   <img class="imgContainer" src="{{product.miniatura}}" alt="">
   <div class="card-body">
     <p class="text-center">Precio: {{product.precio| currency:'CAD':'symbol-narrow':'4.2-2'}}</p>
-    <div class="d-flex justify-content-between align-items-center">
+    <div class="d-flex justify-content-between align-items-center" *ngIf="catalogo">
       <div style="display: contents;" *ngIf="product.cantidadDisponible!==0">
-        <button type="button" [routerLink]="[ '/product']" class="btn btn-primary">Solicitar</button>
+        <button type="button" [routerLink]="[ '/product']" (click)="sendProd(product)" class="btn btn-primary">Solicitar</button>
         <small>Disponibles:{{product.cantidadDisponible}}</small>
       </div>
     </div>
