--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -2,72 +2,42 @@
   <form #formRegister="ngForm" (ngSubmit)="onRegister(formRegister)">
     <div class="form-row">
       <h1>User Profile</h1>
-      <div class="alert alert-danger" role="alert" *ngIf="isError">
-        {{msgError}}
-      </div>
+      
       <div class="form-row">
         <div class="form-group col-md-6">
-          <label>Name</label>
-          <input type="text" class="form-control" #name="ngModel" name="Name" [(ngModel)]="userApp.user.Name"
-            placeholder="Name" required minlength="4" maxlength="20">
+          <label>Nombre</label>
+          <input type="text" class="form-control" #nombre="ngModel" name="nombre" [(ngModel)]="user.nombre"
+            placeholder="Nombre" required minlength="4" maxlength="20">
         </div>
-        <div class="alert alert-danger" role="alert" *ngIf="name.touched && !name.valid">
-          <div *ngIf="name.errors.required">Name is required</div>
-          <div *ngIf="name.errors.minlength">Name must be at least 4 characters</div>
-          <div *ngIf="name.errors.maxlength">Name must be maxime 20 characters</div>
-        </div>
+        
         <div class="form-group col-md-6">
-          <label>LastName</label>
-          <input type="text" class="form-control" #LastName="ngModel" name="LastName" [(ngModel)]="userApp.user.LastName"
-            placeholder="LastName">
+          <label>Apellido</label>
+          <input type="text" class="form-control" #apellido="ngModel" name="apellido" [(ngModel)]="user.apellido"
+            placeholder="Apellido">
         </div>
 
       </div>
       <div class="form-row">
-        <div class="form-group col-md-6">
-          <label>Email</label>
-          <input type="email" class="form-control" #email="ngModel" name="email" [(ngModel)]="userApp.user.email"
-            placeholder="Email" required>
+          <label>Dirección de envio</label>
+          <input type="text" class="form-control" #direccion="ngModel" name="direccion" [(ngModel)]="user.direccion"
+            placeholder="direccion" required>
+        
+        <div class="alert alert-danger" role="alert" *ngIf="direccion.touched && !direccion.valid">
+          <div *ngIf="direccion.errors.required">Dirección is required</div>
         </div>
-        <div class="alert alert-danger" role="alert" *ngIf="email.touched && !email.valid">
-          <div *ngIf="email.errors.required">Email is required</div>
-        </div>
-        <div class="form-group col-md-6">
-          <label>Password</label>
-          <input type="password" class="form-control" #password="ngModel" name="password" [(ngModel)]="userApp.user.password"
-            placeholder="Password" required>
-        </div>
-        <div class="alert alert-danger" role="alert" *ngIf="password.touched && !password.valid">
-          <div *ngIf="password.errors.required">password is required</div>
-        </div>
+        <label>Ciudad</label>
+        <select name="ciudad" placeholder="Ciudad" [(ngModel)]="user.ciudad" class="form-control form-control-lg">
+          <option value="option-1">Medellin</option>
+          <option value="option-2">Bogota</option>
+        </select><br>
       </div>
       <div class="form-row">
-        <div class="form-group col-md-6">
-          <label>Username</label>
-          <input type="text" class="form-control" #Username="ngModel" name="Username" [(ngModel)]="userApp.user.username"
-            placeholder="Username" required>
+        
+        <div class="form-group">
+          <label for="exampleFormControlFile1">Cedula (pdf) </label>
+          <input type="file" class="form-control-file" id="exampleFormControlFile1">
         </div>
-        <div class="alert alert-danger" role="alert" *ngIf="Username.touched && !Username.valid">
-          <div *ngIf="Username.errors.required">Username is required</div>
-
-        </div>
-
-        <div class="form-group col-md-3">
-          <label>
-            Is Militar
-          </label>
-          <input style="margin-left: 5px;" class="form-check-input" type="checkbox" name="isMilitar" [(ngModel)]="userApp.user.isMilitar"
-            #isMilitar="ngModel">
-
-        </div>
-        <div class="form-check col-md-3">
-          <label>
-            Is Temporal
-          </label>
-          <input style="margin-left: 5px;" class="form-check-input" type="checkbox" name="isTemporal" [(ngModel)]="userApp.user.isTemporal"
-            #isTemporal="ngModel">
-
-        </div>
+        
       </div>
     </div>
     <button type="submit" class="btn btn-primary">Register</button>
