modal img fixed

--- a/src/app/components/catalogo/catalogo.component.html
+++ b/src/app/components/catalogo/catalogo.component.html
@@ -17,3 +17,7 @@
     </div>
   </div>
 </main>
+<!-- <h1 class="text-center">Celulares</h1>
+        <div class="col-md-3" *ngFor="let product of products; let i=index">
+          <app-card *ngIf="product.categoria==='celulares'" [product]="product" ></app-card>
+        </div> -->
