--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -39,8 +39,8 @@
       <div class="form-row">
         
         <div class="form-group">
-          <label for="exampleFormControlFile1">Cedula (pdf) </label>
-          <input type="file" accept=".pdf" (change)="upLoad($event)" class="form-control-file" id="exampleFormControlFile1">
+          <label for="exampleFormControlFile1">Cedula (solo formato pdf) </label>
+          <input type="file" accept=".pdf" (change)="upLoad($event.target)" class="form-control-file" >
         </div>
         
       </div>
