--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -4,7 +4,7 @@
     <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
   </mat-form-field>
   
-  <table mat-table [dataSource]="users[0]" class="mat-elevation-z8">
+  <table mat-table [dataSource]="this.users" class="mat-elevation-z8">
   
     <!-- ID Column -->
     <ng-container matColumnDef="Id">
