--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -14,7 +14,7 @@
   
     <!--  Column -->
     <ng-container matColumnDef="Nombre">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <th mat-header-cell *matHeaderCellDef> Nombre </th>
       <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
     </ng-container>
   
@@ -30,11 +30,21 @@
       <td mat-cell *matCellDef="let element"> {{element.fecha}} </td>
     </ng-container>
     <!--  Column -->
+     <ng-container matColumnDef="cedulaPdf">
+      <th mat-header-cell *matHeaderCellDef> CédulaPdf </th>
+      <td mat-cell *matCellDef="let element"> {{element.cedulaPdf}} </td>
+    </ng-container>
+    <!--  Column -->
     <ng-container matColumnDef="Direccion">
       <th mat-header-cell *matHeaderCellDef> Direccion </th>
       <td mat-cell *matCellDef="let element"> {{element.direccion}} </td>
     </ng-container>
-  
+    <!--  Column -->
+   <ng-container matColumnDef="Ciudad">
+    <th mat-header-cell *matHeaderCellDef> Ciudad </th>
+    <td mat-cell *matCellDef="let element"> {{element.ciudad}} </td>
+  </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
